2009-02-18  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Alexey Proskuryakov.

        https://bugs.webkit.org/show_bug.cgi?id=23992
        REGRESSION: crash on windows loading http://www.stickam.com/liveStreams.do

        Unable to reduce to a layout test.

        * page/Frame.cpp:
        (WebCore::Frame::contentRenderer):

2009-02-18  Evan Stade  <estade@chromium.org>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=23861
        Stroke font outlines on chromium linux

        TEST=LayoutTests/svg/custom/pointer-events-text.svg

        * platform/graphics/chromium/FontLinux.cpp:
        (WebCore::Font::drawGlyphs):

2009-02-18  Evan Stade  <estade@chromium.org>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=23860
        Resync some graphics/skia files with their chromium counterparts

        This comes from chromium patches <http://codereview.chromium.org/17633>
        and <http://codereview.chromium.org/17454>

        * platform/graphics/skia/GraphicsContextSkia.cpp:
        (WebCore::GraphicsContext::clipPath):
        (WebCore::GraphicsContext::fillPath):
        * platform/graphics/skia/PlatformContextSkia.cpp:
        (PlatformContextSkia::addPath):
        (PlatformContextSkia::currentPath):
        * platform/graphics/skia/PlatformContextSkia.h:

2009-02-18  Gustavo Noronha Silva  <gns@gnome.org>

        Unreviewed.

        Build fix after r41060.

        * GNUmakefile.am:

2009-02-18  Dimitri Glazkov  <dglazkov@chromium.org>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=24005
        Add an include to fix Chromium build.

        * page/animation/AnimationController.cpp: Add UnusedParam.h include.

2009-02-18  Gustavo Noronha Silva  <gns@gnome.org>

        Reviewed by Holger Freyther.

        Fix symbols.filter location, and add other missing files to the
        autotools build, so that make dist works.
