@@ -132,6 +132,7 @@ __ZN7WebCore10StringImpl7replaceEtt
 __ZN7WebCore10StringImpl8endsWithEPS0_b
 __ZN7WebCore10StringImplD1Ev
 __ZN7WebCore10StringImplcvP8NSStringEv
+__ZN7WebCore10handCursorEv
 __ZN7WebCore11CachedFrame23cachedFramePlatformDataEv
 __ZN7WebCore11CachedFrame26setCachedFramePlatformDataEPNS_23CachedFramePlatformDataE
 __ZN7WebCore11ContextMenu22setPlatformDescriptionEP14NSMutableArray
